@@ -1,3 +1,10 @@
+2003-12-17  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* DESCRIPTION (Version, Date): 1.3-6 - released
+
+	* R/zzz.R (.First.lib): mva or stats depending on R version
+	* R/entropy.R (AIC): AIC.vlmc for R ver < 1.4
+
 2003-11-07  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Version, Date): 1.3-5 - release to CRAN
